checker/tests/output/lists/ill-typed/unexpected-list-pair.stella
ERROR_UNEXPECTED_LIST
